--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/node": "^12.6.9",
     "axios": "^0.21.1",
+    "koa": "^2.13.1",
     "less": "^4.1.1",
     "less-loader": "7",
     "nodemon": "^1.19.1"
