feat: tcp/udp test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "cSpell.words": [
+    "nums"
+  ],
+  "liveServer.settings.port": 5501
   // "emmet.includeLanguages": {
     // "postcss": "css"
   // }
